--- a/config.yaml
+++ b/config.yaml
@@ -17,6 +17,7 @@ descriptions:
     chrom: Chromosome to be modeled. The input files are going to be filtered for
       intra-chromosomal contacts within this chromosome.
     pdf_report: Whether to save the simulation diagnostics in a pdf format.
+    remove_problematic: A flag indicating whether at each resolution round problematic contacts that the simulation was unable to resolve, should be removed.
   simulation:
     platform: 'Available platoforms: CPU, CUDA, OpenCL, HIP'
     resolutions: Resolutions to be used for hierarchical modeling. Expected to be
@@ -82,27 +83,28 @@ descriptions:
 
       If False the coefficient will have stable value of ff_coef.'
 general:
-  input: examples/example1_cell_cycle
-  output: results
-  n: 10
-  m: 100
+  input: ./data/cell_cycle/chr12
+  output: ./results/tests/test_k562_chr12_v4/
+  n: 5
+  m: 40
   n_contacts: 50
-  artificial_structure: 1
-  genome: mm10
-  chrom: chr1
-  pdf_report: true
+  artificial_structure: 2
+  genome: hg38
+  chrom: chr12
+  pdf_report: false
+  remove_problematic: true
 simulation:
   platform: OpenCL
-  resolutions: 5,2
-  N_steps: 100
-  burnin: 5
+  resolutions: 8,2,0.4,0.05
+  N_steps: 50
+  burnin: 0
   MC_step: 1
   sim_step: 20
 forcefield:
   ev_formula: harmonic
   ev_min_dist: 1.0
-  ev_coef: 1000.0
-  ev_coef_evol: false
+  ev_coef: 100.0
+  ev_coef_evol: true
   bb_formula: harmonic
   bb_opt_dist: 1.0
   bb_lin_thresh: 2.0
@@ -116,5 +118,5 @@ forcefield:
   ff_formula: harmonic
   ff_opt_dist: 1.0
   ff_lin_thresh: 2.0
-  ff_coef: 1000.0
+  ff_coef: 100.0
   ff_coef_evol: false
