--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,11 @@
 biopython==1.84
-fonttools==4.54.1
 fpdf2==2.8.1
 hilbertcurve==2.0.5
-HTMLParser==0.0.2
-matplotlib==3.9.2
-matplotlib-inline==0.1.7
-numpy==1.26.4
+matplotlib==3.10.0
+numpy==2.2.2
 OpenMM==8.1.1
 pandas==2.2.3
-pillow==10.4.0
-pyvista==0.44.1
+Pillow==11.1.0
 PyYAML==6.0.2
-scipy==1.14.1
+scipy==1.15.1
 tqdm==4.66.5
