--- a/config.yaml
+++ b/config.yaml
@@ -17,9 +17,10 @@ descriptions:
     chrom: Chromosome to be modeled. The input files are going to be filtered for
       intra-chromosomal contacts within this chromosome.
     pdf_report: Whether to save the simulation diagnostics in a pdf format.
-    remove_problematic: A flag indicating whether at each resolution round problematic contacts that the simulation was unable to resolve, should be removed.
+    remove_problematic: A flag indicating whether at each resolution round problematic
+      contacts that the simulation was unable to resolve, should be removed.
   simulation:
-    platform: 'Available platoforms: CPU, CUDA, OpenCL, HIP'
+    platform: 'Available platoforms: CPU, CUDA and OpenCL.'
     resolutions: Resolutions to be used for hierarchical modeling. Expected to be
       in the form of comma separated integer of float numbers in the units of Mb.
     N_steps: Number of simulation steps to take at every resolution
@@ -83,19 +84,19 @@ descriptions:
 
       If False the coefficient will have stable value of ff_coef.'
 general:
-  input: ./data/cell_cycle/chr12
-  output: ./results/tests/test_k562_chr12_v4/
+  input: examples/example1_cell_cycle
+  output: ./results/tests/teston_off3/
   n: 5
   m: 40
   n_contacts: 50
-  artificial_structure: 2
-  genome: hg38
-  chrom: chr12
-  pdf_report: false
-  remove_problematic: true
+  artificial_structure: 1
+  genome: mm10
+  chrom: chr1
+  pdf_report: true
+  remove_problematic: false
 simulation:
   platform: OpenCL
-  resolutions: 8,2,0.4,0.05
+  resolutions: 5,2
   N_steps: 50
   burnin: 0
   MC_step: 1
@@ -104,16 +105,16 @@ forcefield:
   ev_formula: harmonic
   ev_min_dist: 1.0
   ev_coef: 100.0
-  ev_coef_evol: true
+  ev_coef_evol: false
   bb_formula: harmonic
   bb_opt_dist: 1.0
   bb_lin_thresh: 2.0
   bb_coef: 1000.0
-  bb_coef_evol: false
+  bb_coef_evol: true
   sc_formula: harmonic
   sc_opt_dist: 1.0
   sc_lin_thresh: 2.0
-  sc_coef: 1000.0
+  sc_coef: 10.0
   sc_coef_evol: false
   ff_formula: harmonic
   ff_opt_dist: 1.0
