--- a/config.yaml
+++ b/config.yaml
@@ -1,40 +1,40 @@
 descriptions:
   general:
-    input: Folder containing input scHi-C contacts in csv format. If 'None' simulated
-      scHi-C maps are going to be used.
-    output: Output folder for storing simulation results
+    input: 'Folder containing input scHi-C contacts in csv format. If None simulated
+      scHi-C maps are going to be used.'
+    output: 'Output folder for storing simulation results.'
     genome: 'Genome assembly of the input data. Currently supported assemblies: hg19,
-      hg38, mm10, GRCm39.'
-    pdf_report: Whether to save the simulation diagnostics in a pdf format.
-    remove_problematic: A flag indicating whether at each resolution round problematic
-      contacts that the simulation was unable to resolve, should be removed.
+      hg38, mm10, GRCm39, GRCg6a.'
+    pdf_report: 'Whether to save the simulation diagnostics in a pdf format.'
+    remove_problematic: 'A flag indicating whether at each resolution round problematic
+      contacts that the simulation was unable to resolve, should be removed.'
   simulation:
     platform: 'Available platoforms: CPU, CUDA and OpenCL.'
-    resolutions: Resolutions to be used for hierarchical modeling. Expected to be
-      in the form of comma separated integer of float numbers in the units of Mb.
-    N_steps: Number of simulation steps to take at every resolution
-    burnin: Number of simulation steps before starting collecting the simulatin diagnostic
-      data
-    MC_step: Simulation diagnostic data is going to be collected every MC_step
-    sim_step: The simulation step of Langevin integrator
+    resolutions: 'Resolutions to be used for hierarchical modeling. Expected to be
+      in the form of comma separated integer of float numbers in the units of Mb.'
+    N_steps: 'Number of simulation steps to take at every resolution.'
+    burnin: 'Number of simulation steps before starting collecting the simulatin diagnostic
+      data.'
+    MC_step: 'Simulation diagnostic data is going to be collected every MC_step.'
+    sim_step: 'The simulation step of Langevin integrator.'
   forcefield:
-    ev_formula: 'Type of the Excluded Volume (EV) repulsion. Available types: harmonic'
-    ev_min_dist: Excluded Volume (EV) minimal distance
-    ev_coef: Excluded Volume (EV) force coefficient
+    ev_formula: 'Type of the Excluded Volume (EV) repulsion. Available types: harmonic.'
+    ev_min_dist: 'Excluded Volume (EV) minimal distance.'
+    ev_coef: 'Excluded Volume (EV) force coefficient.'
     ev_coef_evol: 'Enable or disable the changing EV coefficient value.
 
       If True the coefficient will start as 0 at the beginning of the simulation and
       reach ev_coef at the end.
 
       If False the coefficient will have stable value of ev_coef.'
-    bb_formula: 'Type of the Backbone (BB) potential. Available types: harmonic, gaussian'
-    bb_opt_dist: Backbone (BB) optimal distance
+    bb_formula: 'Type of the Backbone (BB) potential. Available types: harmonic, gaussian.'
+    bb_opt_dist: 'Backbone (BB) optimal distance.'
     bb_lin_thresh: 'Backbone (BB) distance after which the potential grows linearly.
 
       Must be strictly greater than bb_opt_dist.
 
-      Only applicable if bb_formula is harmonic'
-    bb_coef: Backbone (BB) force coefficient
+      Only applicable if bb_formula is harmonic.'
+    bb_coef: 'Backbone (BB) force coefficient.'
     bb_coef_evol: 'Enable or disable the changing BB coefficient value.
 
       If True the coefficient will start as 0 at the beginning of the simulation and
@@ -42,15 +42,15 @@ descriptions:
 
       If False the coefficient will have stable value of bb_coef.'
     sc_formula: 'Type of the Single cell contact (SC) potential. Available types:
-      harmonic, gaussian'
-    sc_opt_dist: Single cell contact (SC) optimal distance
+      harmonic, gaussian.'
+    sc_opt_dist: 'Single cell contact (SC) optimal distance.'
     sc_lin_thresh: 'Single cell contact (SC) distance after which the potential grows
       linearly.
 
       Must be strictly greater than sc_opt_dist.
 
-      Only applicable if sc_formula is harmonic'
-    sc_coef: Single cell contact (SC) force coefficient
+      Only applicable if sc_formula is harmonic.'
+    sc_coef: 'Single cell contact (SC) force coefficient.'
     sc_coef_evol: 'Enable or disable the changing SC coefficient value.
 
       If True the coefficient will start as 0 at the beginning of the simulation and
@@ -58,14 +58,14 @@ descriptions:
 
       If False the coefficient will have stable value of sc_coef.'
     ff_formula: 'Type of the Frame force (FF) potential. Available types: harmonic,
-      gaussian'
-    ff_opt_dist: Frame force (FF) optimal distance
+      gaussian.'
+    ff_opt_dist: 'Frame force (FF) optimal distance.'
     ff_lin_thresh: 'Frame force (FF) distance after which the potential grows linearly.
 
       Must be strictly greater than ff_opt_dist.
 
-      Only applicable if ff_formula is harmonic'
-    ff_coef: Frame force (FF) force coefficient
+      Only applicable if ff_formula is harmonic.'
+    ff_coef: 'Frame force (FF) force coefficient.'
     ff_coef_evol: 'Enable or disable the changing FF coefficient value.
 
       If True the coefficient will start as 0 at the beginning of the simulation and
